# Trading_EVM_Scraping

./: Dockerfile  Readme.md  app.yaml  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt  useProxy.py
backend/: .env
backend/api/app/routers/: default.py  getInfoByScraping.py  getMainInfo.py  getPolygonInfoByScraping.py
backend/api/core/: config.py
